# fastapi-workshop

./: .env.example  .gitignore  FASTAPI.md  INSTRUCTIONS.md  PROGRESS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
solutions/app/: dependencies.py  main.py
solutions/app/api/v1/: router.py
solutions/app/api/v1/endpoints/: auth.py  ideas.py
solutions/app/core/: config.py  database.py  security.py
solutions/app/models/: idea.py  user.py
solutions/app/schemas/: idea.py  user.py
solutions/tests/: conftest.py  test_auth.py  test_ideas.py
